Fixed issue with gitignore still comitting probuilder config. Fiddled with player values. Changed the physics timestep.

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-ProjectSettings/Packages/com.unity.probuilder/Settings.json
-Assets/Private/
-Assets/Private.meta
+/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+/Assets/Private/
+/Assets/Private.meta
